--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viny",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A tiny functional-style validator",
   "main": "viny.js",
   "scripts": {
@@ -11,8 +11,8 @@
     "validator",
     "validation",
     "validate",
-    "viny",
-    "functional"
+    "functional",
+    "viny"
   ],
   "author": "rmdm",
   "license": "MIT",
