--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "viny",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A tiny functional-style validator",
   "main": "viny.js",
   "scripts": {
-    "test": "mocha --recursive test",
-    "cover": "nyc npm t"
+    "test": "npm run lint && npm run mocha",
+    "cover": "nyc npm run mocha",
+    "mocha": "mocha --recursive test",
+    "lint": "eslint viny.js"
   },
   "keywords": [
     "validator",
@@ -18,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "assert-match": "^1.1.1",
+    "eslint": "^5.4.0",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2"
   }
