--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "viny",
-  "version": "0.1.3",
-  "description": "A tiny functional-style validator",
+  "version": "0.1.4",
+  "description": "A tiny functional validator",
   "main": "viny.js",
   "scripts": {
     "test": "npm run lint && npm run mocha",
